--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ asgiref==3.8.1
 attrs==23.2.0
 black==23.12.1
 bootstrap4==0.1.0
+Brotli==1.1.0
 click==8.1.7
 colorama==0.4.6
 crispy-bootstrap4==2024.1
 crispy-bootstrap5==2023.10
 distlib==0.3.8
+dj-config-url==0.1.1
 Django==5.0.3
 django-cleanup==8.1.0
 django-crispy-forms==2.1
@@ -49,3 +51,4 @@ tzdata==2024.1
 uritemplate==4.1.1
 uvicorn==0.30.1
 virtualenv==20.25.1
+whitenoise==6.6.0
